--- a/src/DoddleReport.OpenXml/packages.config
+++ b/src/DoddleReport.OpenXml/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.68.1" targetFramework="net40" />
-  <package id="DocumentFormat.OpenXml" version="1.0" />
+  <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
 </packages>
