DoddleReport proper is on .NET Standard. Using System.Drawing.Common for Color support. Using System.Configuration.ConfigurationManager for legacy config-file support.

--- a/src/DoddleReport/DoddleReport.csproj
+++ b/src/DoddleReport/DoddleReport.csproj
@@ -1,17 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F08B2994-4D05-423E-A8FE-7D1E8A63472B}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DoddleReport</RootNamespace>
-    <AssemblyName>DoddleReport</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
     <SccLocalPath>
@@ -20,13 +10,8 @@
     </SccAuxPath>
     <SccProvider>
     </SccProvider>
-    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -42,84 +27,25 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>bin\Release\DoddleReport.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core">
+    <Reference Update="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\Config.cs" />
-    <Compile Include="Configuration\DoddleReportSection.cs" />
-    <Compile Include="Configuration\StyleElement.cs" />
-    <Compile Include="Configuration\StyleElementCollection.cs" />
-    <Compile Include="Configuration\WriterElement.cs" />
-    <Compile Include="Configuration\WriterElementCollection.cs" />
-    <None Include="DoddleReport.nuspec">
+    <None Update="DoddleReport.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="SharePoint\SPListReportSource.cs" />
-    <Compile Include="Dynamic\DynamicReportSource.cs" />
-    <Compile Include="ReportSources\DataTableReportSource.cs" />
-    <Compile Include="ReportSources\EnumerableReportSource.cs" />
-    <Compile Include="RowFieldDataDictionary.cs" />
-    <Compile Include="Helpers\ReflectionExtensions.cs" />
-    <Compile Include="Helpers\StringExtensions.cs" />
-    <Compile Include="HorizontalAlignment.cs" />
-    <Compile Include="Helpers\HtmlFormatHelper.cs" />
-    <Compile Include="IReportSource.cs" />
-    <Compile Include="IReportWriter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenderHintsCollection.cs" />
-    <Compile Include="Report.cs" />
-    <Compile Include="ReportBuilder.cs" />
-    <Compile Include="ReportField.cs" />
-    <Compile Include="ReportFieldCollection.cs" />
-    <Compile Include="ReportOrientation.cs" />
-    <Compile Include="ReportRow.cs" />
-    <Compile Include="ReportRowCollection.cs" />
-    <Compile Include="ReportRowEventArgs.cs" />
-    <Compile Include="ReportRowType.cs" />
-    <Compile Include="ReportStyle.cs" />
-    <Compile Include="ReportTextFieldCollection.cs" />
-    <Compile Include="RowField.cs" />
-    <Compile Include="RowFieldCollection.cs" />
-    <Compile Include="VerticalAlignment.cs" />
-    <Compile Include="Writers\DelimitedTextReportWriter.cs" />
-    <Compile Include="Writers\ExcelReportWriter.cs" />
-    <Compile Include="Writers\HtmlReportWriter.cs" />
-    <None Include="web.config.transform" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -138,17 +64,17 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.326103">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="SharePoint\SPListReportSource.cs" />
+  </ItemGroup>
+  <PropertyGroup />
 </Project>
