--- a/src/DoddleReport.Web/packages.config
+++ b/src/DoddleReport.Web/packages.config
@@ -4,4 +4,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
 </packages>
