--- a/src/DoddleReport.Sample.NetCoreConsole/DoddleReport.Sample.NetCoreConsole.csproj
+++ b/src/DoddleReport.Sample.NetCoreConsole/DoddleReport.Sample.NetCoreConsole.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DoddleReport\DoddleReport.csproj" />
+  </ItemGroup>
+
 </Project>
