Migrating DoddleReport.OpenXml to .NET Standard.  Works from .NET 4.7.2 Web and .NET 6 console app.  Column widths are not adjusting to fit contents currently, as expected.

--- a/src/DoddleReport.Sample.NetCoreConsole/DoddleReport.Sample.NetCoreConsole.csproj
+++ b/src/DoddleReport.Sample.NetCoreConsole/DoddleReport.Sample.NetCoreConsole.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DoddleReport.OpenXml\DoddleReport.OpenXml.csproj" />
     <ProjectReference Include="..\DoddleReport\DoddleReport.csproj" />
   </ItemGroup>
 
