--- a/src/DoddleReport.Sample.Web/packages.config
+++ b/src/DoddleReport.Sample.Web/packages.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ABCpdf" version="12.2.0.4" targetFramework="net45" />
+  <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.8" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net45" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
