--- a/src/DoddleReport.Sample.Web/packages.config
+++ b/src/DoddleReport.Sample.Web/packages.config
@@ -4,11 +4,13 @@
   <package id="ClosedXML" version="0.95.4" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net472" />
+  <package id="iTextSharp.LGPLv2.Core" version="1.8.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.8" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net45" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
