--- a/src/DoddleReport.Sample.CoreWeb/DoddleReport.Sample.CoreWeb.csproj
+++ b/src/DoddleReport.Sample.CoreWeb/DoddleReport.Sample.CoreWeb.csproj
@@ -7,6 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="bad.file" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="bad.file">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DoddleReport.Core.Web\DoddleReport.Core.Web.csproj" />
     <ProjectReference Include="..\DoddleReport.OpenXml\DoddleReport.OpenXml.csproj" />
     <ProjectReference Include="..\DoddleReport\DoddleReport.csproj" />
   </ItemGroup>
