--- a/src/DoddleReport.Sample.Web/Web.config
+++ b/src/DoddleReport.Sample.Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="doddleReport" type="DoddleReport.Configuration.DoddleReportSection, DoddleReport" />
+    <section name="doddleReport" type="DoddleReport.Legacy.Configuration.DoddleReportSection, DoddleReport.Legacy" />
   </configSections>
   <doddleReport defaultWriter="Html" dataRowStyle="DataRowStyle" headerRowStyle="HeaderRowStyle" footerRowStyle="FooterRowStyle">
     <styles>
